--- a/index.html
+++ b/index.html
@@ -198,6 +198,7 @@
     return 1 * height / 3 - getWizardHeight();
   };
 </script>
+<script src="js/stat.js"></script>
 <script src="js/game.js"></script>
 
 </body>
