--- a/index.html
+++ b/index.html
@@ -199,7 +199,13 @@
   };
 </script>
 <script src="js/dialog.js"></script>
-<script src="js/setup.js"></script>
+<script src="js/get-random-element.js"></script>
+<script src="js/render-similar-wizards.js"></script>
+<script src="js/render-popup-default.js"></script>
+<script src="js/on-popup-esc-press.js"></script>
+<script src="js/setup-dialog.js"></script>
+<script src="js/form-dialog.js"></script>
+<script src="js/setup-player.js"></script>
 <script src="js/stat.js"></script>
 <script src="js/game.js"></script>
 
