Реализовал загрузку данных с сервера, отрисовку похожих волшебников на их основании и отправку формы на сервер с отработкой ошибок

--- a/index.html
+++ b/index.html
@@ -70,7 +70,6 @@
 <div class="overlay setup hidden">
   <form class="setup-wizard-form"
         method="post"
-        action="https://js.dump.academy/code-and-magick"
         enctype="multipart/form-data"
         autocomplete="off">
 
@@ -199,6 +198,7 @@
   };
 </script>
 <script src="js/dialog.js"></script>
+<script src="js/backend.js"></script>
 <script src="js/get-random-element.js"></script>
 <script src="js/render-similar-wizards.js"></script>
 <script src="js/render-popup-default.js"></script>
